made site read-only

--- a/app/views/accounts/change_password.html.erb
+++ b/app/views/accounts/change_password.html.erb
@@ -7,12 +7,7 @@
 
             <div class="span9">
                 <div class="title"><h1>RESET YOUR PASSWORD</h1></div>
-                <% if current_user.mav_hash %>
-                    <p>To reset your password we will email you a temporary passcode. You will then need to use this passcode to change your password.</p>
-                    <a href="#forgot-password-modal" data-toggle="modal" class="btn"><span>Request a new passcode</span></a>
-                <% else %>
-                    You are logging in with OAuth using <%= @login_type %> so there is no need to reset your password. Simply click on the <%= @login_type %> icon at the top of our site to login using your <%= @login_type %> account.
-                <% end %>
+                    <p><strong>You can no longer update your account information here. Please <%= link_to 'log into TopCoder', 'http://beta.topcoder.com'%> and update your profile.</strong></p>
 
             </div>
 
