--- a/app/views/accounts/public_profile.html.haml
+++ b/app/views/accounts/public_profile.html.haml
@@ -2,6 +2,10 @@
   .span9
     .title
       %h1 EDIT PUBLIC PROFILE
+
+    %p
+      %strong You can no longer update your account information here. Please #{ link_to 'log into TopCoder', 'http://beta.topcoder.com'} and update your profile. 
+      
     %p The community wants to get to know you. Who is that brainiac writing those compliant, minified lines of code? Show you’re really not a robot and write a little something about yourelf. Note that the information you provide below is public and anyone can see it, including your boss.
 
 
@@ -46,11 +50,6 @@
         %label.control-label Linkedin Url
         .controls
           = text_field_tag "account[linkedin]", @member.linkedin, class: "input-xxlarge"
-
-      .controls-row
-        .control-group
-          .controls
-            = submit_tag "Save Profile", class: "btn pull-right"
         
 
 
