added new challenge button back

--- a/app/views/admin/challenges/index.html.erb
+++ b/app/views/admin/challenges/index.html.erb
@@ -32,7 +32,9 @@ window.onload = function() {
 
     <table border="0" width="100%">
     <tr>
-      <td> &nbsp;<td>
+      <td>    
+        <a class="btn btn-primary" type="button" href="#new-challenge-modal" data-toggle="modal"><span>New Challenge</span></a></p>
+      <td>
       <td><% if @logo %><span class="pull-right" style="margin-top:-10px"><img src="<%= @logo %>"></span><% end %></td>
     </tr>
     </table>
