changed redirect to www.topcoder.com

--- a/app/views/accounts/payment_info.html.haml
+++ b/app/views/accounts/payment_info.html.haml
@@ -4,7 +4,7 @@
       %h1 PAYMENT INFO
 
     %p
-      %strong You can no longer update your account information here. Please #{ link_to 'log into TopCoder', 'http://beta.topcoder.com'} and update your profile. 
+      %strong You can no longer update your account information here. Please #{ link_to 'log into TopCoder', 'http://www.topcoder.com'} and update your profile. 
       
     %p 
       %span If you've won money from a challenge here is how you get it. Make sure you check here often to ensure we are not waiting on something from you. Payments are paid on dates depending on the method that you define below. Please see the 
