--- a/app/views/accounts/change_password.html.erb
+++ b/app/views/accounts/change_password.html.erb
@@ -7,7 +7,7 @@
 
             <div class="span9">
                 <div class="title"><h1>RESET YOUR PASSWORD</h1></div>
-                    <p><strong>You can no longer update your account information here. Please <%= link_to 'log into TopCoder', 'http://beta.topcoder.com'%> and update your profile.</strong></p>
+                    <p><strong>You can no longer update your account information here. Please <%= link_to 'log into TopCoder', 'http://www.topcoder.com'%> and update your profile.</strong></p>
 
             </div>
 
