--- a/app/views/accounts/details.html.haml
+++ b/app/views/accounts/details.html.haml
@@ -4,7 +4,7 @@
       %h1 ACCOUNT DETAILS
 
     %p
-      %strong You can no longer update your account information here. Please #{ link_to 'log into TopCoder', 'http://beta.topcoder.com'} and update your profile. 
+      %strong You can no longer update your account information here. Please #{ link_to 'log into TopCoder', 'http://www.topcoder.com'} and update your profile. 
       
     %p Sometimes we need to send you stuff. Like award money. So keep your contact info up to date so we can get in touch! We promise to never ever use your information for evil (unless we have your permission).
 
