--- a/app/views/accounts/preferences.html.erb
+++ b/app/views/accounts/preferences.html.erb
@@ -9,7 +9,7 @@
 
             <div class="title"><h1>PREFERENCES</h1></div>
 
-            <p><strong>You can no longer update your account information here. Please <%= link_to 'log into TopCoder', 'http://beta.topcoder.com'%> and update your profile.</strong></p>
+            <p><strong>You can no longer update your account information here. Please <%= link_to 'log into TopCoder', 'http://www.topcoder.com'%> and update your profile.</strong></p>
 
               <%= form_for 'account_preferences', :action => admin_challenges_path, :method => "post", html: { :id => 'new_challenge_frm' } do |f| %>
                 <%= f.hidden_field :all_preferences, :value => @all_preferences.join(',') %>
