--- a/app/views/members/leaderboard.html.erb
+++ b/app/views/members/leaderboard.html.erb
@@ -9,55 +9,7 @@
             <div class="title"><h1>LEADERBOARD</h1></div>
         </div>
 
-        <div class="row-fluid leaderboard">
-
-            <div class="span4">
-                <h2>THIS MONTH</h2>
-                <% if @this_month.empty? %>No results yet for this month.<% end %>
-                <% @this_month.each do |member| %>
-                <div class="placement well">
-                    <%= cl_image_tag(member['profile_pic'], :width => 82, :height => 82, :crop => :fill, 
-                        :class => 'pull-left photo', :alt => member['username']) %>
-                    <%= link_to member['username'], member_path(member['username']), :style => 'margin-top:10px' %>
-                    # of Wins: <%= member['wins'].to_i %>
-                    <span class="prize"><%= number_to_currency(member['total_money'], :precision => 0) %></span>
-                    <span class="place <%= leaderboard_place_decorator(member['rank'].to_i) %>"><%= member['rank'].to_i.ordinalize %></span>
-                </div>
-                <% end %>
-                <%= will_paginate @this_month, :param_name => :page_this_month, :inner_window => 1, :outer_window => 1 %>
-            </div>
-
-            <div class="span4">
-                <h2>THIS YEAR</h2>
-                <% @this_year.each do |member| %>
-                <div class="placement well">
-                    <%= cl_image_tag(member['profile_pic'], :width => 82, :height => 82, :crop => :fill, 
-                        :class => 'pull-left photo', :alt => member['username']) %>
-                    <%= link_to member['username'], member_path(member['username']), :style => 'margin-top:10px' %>
-                    # of Wins: <%= member['wins'].to_i %>
-                    <span class="prize"><%= number_to_currency(member['total_money'], :precision => 0) %></span>
-                    <span class="place <%= leaderboard_place_decorator(member['rank'].to_i) %>"><%= member['rank'].to_i.ordinalize %></span>
-                </div>
-                <% end %>
-                <%= will_paginate @this_year, :param_name => :page_this_year, :inner_window => 1, :outer_window => 1 %>
-            </div>
-
-            <div class="span4">
-                <h2>ALL TIME</h2>
-                <% @all_time.each do |member| %>
-                <div class="placement well">
-                    <%= cl_image_tag(member['profile_pic'], :width => 82, :height => 82, :crop => :fill, 
-                        :class => 'pull-left photo', :alt => member['username']) %>
-                    <%= link_to member['username'], member_path(member['username']), :style => 'margin-top:10px' %>
-                    # of Wins: <%= member['wins'].to_i %>
-                    <span class="prize"><%= number_to_currency(member['total_money'], :precision => 0) %></span>
-                    <span class="place <%= leaderboard_place_decorator(member['rank'].to_i) %>"><%= member['rank'].to_i.ordinalize %></span>
-                </div>
-                <% end %>
-                <%= will_paginate @all_time, :param_name => :page_all_time, :inner_window => 1, :outer_window => 1 %>
-            </div>
-
-        </div>
+        <center>The leaderboard is no longer available. <a href="http://www.youtube.com/watch?v=GszHR6ZrC_w">Sorry</a>.</center>
 
     </div> <!-- /.container -->
 </div><!-- /.loginbar-wrapper -->
